--- a/vko1/index.html
+++ b/vko1/index.html
@@ -7,5 +7,6 @@
 <body>
     <h1>Tervetuloa GitHub Pages-sivustolleni!</h1>
     <p class="container">Tämä on ensimmäinen GitHub Pages -teksti.</p>
+     <a href=index.md>Etusivulle</a> 
 </body>
 </html>
