--- a/vko1/index.html
+++ b/vko1/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>Tervetuloa GitHub Pages-sivustolleni!</h1>
-    <p class="container">Tämä on ensimmäinen GitHub Pages -teksti.</p>
-     <a href=index.md>Etusivulle</a> 
+    <p class="container">Tämä on ensimmäinen GitHub Pages -teksti. </break>
+     <a href="../index.md">Etusivulle</a> </p>
 </body>
 </html>
